--- a/src/elements/Navbar.css
+++ b/src/elements/Navbar.css
@@ -1,7 +1,6 @@
-.logo
-{
-    display: block;
-    padding:0px;
+.logo {
+  display: block;
+  padding: 0px;
 }
 
 .offcanvas {
@@ -11,111 +10,101 @@
 
 /* Ensure the Offcanvas takes up the entire screen */
 .fullscreen-offcanvas {
-  position: fixed;      /* Fix it on the screen */
-  top: 0;               /* Align to the top */
-  left: 0;              /* Align to the left */
-  width: 100vw;         /* Full width of the viewport */
-  height: 100vh;        /* Full height of the viewport */
-  max-width: none;      /* Remove any width restrictions */
-  max-height: none;     /* Remove any height restrictions */
-  padding: 0;           /* Remove any padding inside the Offcanvas */
+  position: fixed; /* Fix it on the screen */
+  top: 0; /* Align to the top */
+  left: 0; /* Align to the left */
+  width: 100vw; /* Full width of the viewport */
+  height: 100vh; /* Full height of the viewport */
+  max-width: none; /* Remove any width restrictions */
+  max-height: none; /* Remove any height restrictions */
+  padding: 0; /* Remove any padding inside the Offcanvas */
 }
 
-.hamburger-react
-{
+.hamburger-react {
   z-index: 1070 !important;
 }
 
-
 /* If the Offcanvas comes from the bottom */
 .fullscreen-offcanvas[data-bs-direction="bottom"] {
-  height: 100vh;        /* Ensure the Offcanvas stretches to full height */
+  height: 100vh; /* Ensure the Offcanvas stretches to full height */
   top: auto;
-  bottom: 0;            /* Align to the bottom of the screen */
-  width: 100%;          /* Take full width */
+  bottom: 0; /* Align to the bottom of the screen */
+  width: 100%; /* Take full width */
 }
 
-
-.header-title-logo{
-    width: auto;
-    max-width: 100%;
-    max-height: 105px;
-    z-index: 1000;
+.header-title-logo {
+  width: auto;
+  max-width: 100%;
+  max-height: 105px;
+  z-index: 1000;
 }
 
-.whole-screen-menu-padding
-{
-    padding-top: calc(1em / 10); 
-    padding-bottom: calc(1em / 10);
+.whole-screen-menu-padding {
+  padding-top: calc(1em / 10);
+  padding-bottom: calc(1em / 10);
 }
 
-.hamburger-react
-{
-    z-index: 1000;
+.hamburger-react {
+  z-index: 1000;
 }
-.nav-button-color
-{
-    font-size: medium;
-    color: white;
+.nav-button-color {
+  font-size: medium;
+  color: white;
 }
 
 .nav-text-underline-sure {
-    position: relative;
-    display: inline-block;
-    color: white;
-  }
-
-.nav-text-underline-sure::after {
-    content: "";
-    position: absolute;
-    bottom: -3px; /* Move the underline 5px down */
-    left: 0;
-    width: 100%;
-    height: 1px; /* Thickness of the underline */
-    background-color: white; /* Color of the underline */
-  }
-
-  .nav-text-underline {
-    position: relative;
-    display: inline-block;
-    color:white;
-  }
-
-  /* Underline styling, initially hidden */
-.nav-text-underline::after {
-    content: "";
-    position: absolute;
-    bottom: -3px; /* Move the underline 5px down */
-    left: 0;
-    width: 100%;
-    height: 1px; /* Thickness of the underline */
-    background-color: white; /* Color of the underline */
-    transform: scaleX(0);  /* Initially scale down to hide */
-    transform-origin: bottom right; /* Make it grow from the right */
-    transition: transform 0.3s ease; /* Add transition for smooth effect */
-  }
-
-  /* Underline appears on hover */
-.nav-text-underline:hover::after {
-    transform: scaleX(1);  /* Scale to full width */
-    transform-origin: bottom left; /* Grow the underline from the left */
-  }
-
-
-.nav-text-font
-{
-    font-family: 'Roc Grotesk';
+  position: relative;
+  display: inline-block;
+  color: white;
 }
 
-.nav-text-large
-{
-    font-size:25px;
+.nav-text-underline-sure::after {
+  content: "";
+  position: absolute;
+  bottom: -3px; /* Move the underline 5px down */
+  left: 0;
+  width: 100%;
+  height: 1px; /* Thickness of the underline */
+  background-color: white; /* Color of the underline */
+}
+
+.nav-text-underline {
+  position: relative;
+  display: inline-block;
+  color: white;
+}
+
+/* Underline styling, initially hidden */
+.nav-text-underline::after {
+  content: "";
+  position: absolute;
+  bottom: -3px; /* Move the underline 5px down */
+  left: 0;
+  width: 100%;
+  height: 1px; /* Thickness of the underline */
+  background-color: white; /* Color of the underline */
+  transform: scaleX(0); /* Initially scale down to hide */
+  transform-origin: bottom right; /* Make it grow from the right */
+  transition: transform 0.3s ease; /* Add transition for smooth effect */
+}
+
+/* Underline appears on hover */
+.nav-text-underline:hover::after {
+  transform: scaleX(1); /* Scale to full width */
+  transform-origin: bottom left; /* Grow the underline from the left */
+}
+
+.nav-text-font {
+  font-family: "Roc Grotesk";
+}
+
+.nav-text-large {
+  font-size: 25px;
 }
 /* Styling for each nav option */
 .nav-option {
-    font-size: 2rem;
-    cursor: pointer;
-    color: white; /* You can change the color */
-    transition: color 0.3s ease;
-  }
-
+  font-size: 2rem;
+  cursor: pointer;
+  color: white; /* You can change the color */
+  transition: color 0.3s ease;
+}
