--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -1,26 +1,22 @@
-.about-text-padding
-{
-    padding-left:6rem;
-    padding-right:1rem;
+.about-text-padding {
+  padding-left: 6rem;
+  padding-right: 1rem;
 }
 
-.about-col-padding
-{
-    padding-left:1rem;
-    padding-right:1rem;
+.about-col-padding {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
-.about-picture
-{
-    width: 100%; /* Make the image width responsive */
+.about-picture {
+  width: 100%; /* Make the image width responsive */
   height: 100%; /* Make the image height responsive */
   object-fit: contain; /* Ensures the image scales to fit within the container */
 }
 
-.about-picture-padding
-{
-    padding-right:5rem;
-    padding-left:1rem;
-    padding-top:0rem;
-    padding-bottom: 2rem;
+.about-picture-padding {
+  padding-right: 5rem;
+  padding-left: 1rem;
+  padding-top: 0rem;
+  padding-bottom: 2rem;
 }
