--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,19 +1,17 @@
-.home-container 
-{
-    width: 100%;
+.home-container {
+  width: 100%;
 }
 
-.social-logo-small
-{
-    width: 36px;
-    display: block;
+.social-logo-small {
+  width: 36px;
+  display: block;
 }
 
 .fade-in {
-    opacity: 0.5;
-    transition: opacity 0.4s cubic-bezier(0.075, 0.82, 0.165, 1); /* Fade-in effect over 1 second */
+  opacity: 0.5;
+  transition: opacity 0.4s cubic-bezier(0.075, 0.82, 0.165, 1); /* Fade-in effect over 1 second */
 }
-  
+
 .fade-in.visible {
-    opacity: 1;
+  opacity: 1;
 }
