--- a/src/elements/Navbar.css
+++ b/src/elements/Navbar.css
@@ -1,6 +1,7 @@
-.logo {
-  display: block;
-  padding: 0px;
+
+.logo-top-margin
+{
+  margin-top:20px;
 }
 
 .offcanvas {
@@ -24,6 +25,21 @@
   z-index: 1070 !important;
 }
 
+.margin-right-burger-menu
+{
+  margin-right:30px;
+}
+
+.margin-left-logo-menu
+{
+  margin-left:25px;
+}
+
+.hamburger-small-screen
+{
+  justify-content: flex-end;
+}
+
 /* If the Offcanvas comes from the bottom */
 .fullscreen-offcanvas[data-bs-direction="bottom"] {
   height: 100vh; /* Ensure the Offcanvas stretches to full height */
@@ -36,6 +52,7 @@
   width: auto;
   max-width: 100%;
   max-height: 105px;
+  width:83px;
   z-index: 1000;
 }
 
@@ -55,7 +72,6 @@
 .nav-text-underline-sure {
   position: relative;
   display: inline-block;
-  color: white;
 }
 
 .nav-text-underline-sure::after {
@@ -65,7 +81,7 @@
   left: 0;
   width: 100%;
   height: 1px; /* Thickness of the underline */
-  background-color: white; /* Color of the underline */
+  background-color: #f5f7f8; /* Color of the underline */
 }
 
 .nav-text-underline {
