--- a/src/elements/Navbar.css
+++ b/src/elements/Navbar.css
@@ -103,3 +103,9 @@
   color: white; /* You can change the color */
   transition: color 0.3s ease;
 }
+
+
+.language-select:hover{
+  opacity: 0.5;
+  cursor:pointer;
+}
