--- a/src/elements/Calendar.css
+++ b/src/elements/Calendar.css
@@ -1,4 +1,4 @@
-.MuiPickersLayout-root {
-    background-color: #31363F !important; /* Set the background color to transparent */
-  }
+/* .MuiPickersLayout-root {
+    background-color: black !important; /* Set the background color to transparent */
+  } */
   
